fixup #video spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,6 @@ p {
 
 .section {
 	width: 100%;
-	min-height: 500px;
 	position: relative;
 	overflow: hidden;
     color: #fff;
@@ -206,19 +205,12 @@ nav li a:hover {
 /* video */
 
 #video {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
     overflow: hidden;
+    margin-bottom: -5px;
 }
 
 #video iframe {
-    position: absolute;
-    top: 30px;
-    left: 0;
     width: 100%;
-    height: 100%;
 }
 
 /* gradient overlays */
